[package]
name = "alice-container"
version = "0.2.0"
edition = "2021"
authors = ["ALICE Project"]
description = "Minimal container runtime with direct cgroup v2 and namespace control"
license = "AGPL-3.0"
repository = "https://github.com/alice-project/alice-container"
keywords = ["container", "cgroup", "namespace", "runtime", "isolation"]
categories = ["os", "virtualization"]
publish = false

[features]
default = ["std"]
std = []
# io_uring support (Linux 5.6+)
io_uring = ["std"]
# clone3 with CLONE_INTO_CGROUP (Linux 5.7+)
clone3 = ["std"]
# PSI (Pressure Stall Information) monitoring (Linux 4.20+)
psi = ["std"]
# All advanced features
full = ["io_uring", "clone3", "psi"]
# ALICE-Analytics container metrics
analytics = ["dep:alice-analytics", "std"]
# ALICE-DB container state persistence
db = ["dep:alice-db", "std"]
# ALICE-Crypto container secret management
crypto = ["dep:alice-crypto", "std"]
# Container sync events
sync = ["std"]

[dependencies]
libc = "0.2"
alice-analytics = { path = "../ALICE-Analytics", optional = true, default-features = false, features = ["std"] }
alice-db = { path = "../ALICE-DB", optional = true, default-features = false }
alice-crypto = { path = "../ALICE-Crypto", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cgroup_bench"
harness = false

[[example]]
name = "cgroup_control"

[[example]]
name = "scheduler_demo"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
